<?xml version="1.0" encoding="utf-8"?><!--工具栏菜单-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--刷新-->
    <item
        android:id="@+id/newslist_menu_refresh"
        android:icon="@drawable/toolbar_menu_refresh"
        android:title="@string/toolbar_menu_refresh1"
        app:showAsAction="always" />
    <!--过滤-->
    <item
        android:icon="@drawable/toolbar_menu_filter"
        android:title="@string/toolbar_menu_add"
        app:showAsAction="always">
        <menu>
            <!--Big cards视图-->
            <item
                android:id="@+id/newslist_menu_cards"
                android:icon="@drawable/main_menu_cards"
                android:iconTint="@color/xproject_daynight_icontint"
                android:title="@string/main_menu_cards" />
            <!--Compact视图-->
            <item
                android:id="@+id/newslist_menu_compact"
                android:icon="@drawable/main_menu_compact"
                android:iconTint="@color/xproject_daynight_icontint"
                android:title="@string/main_menu_compact" />
            <!--Minimal视图-->
            <item
                android:id="@+id/newslist_menu_minimal"
                android:icon="@drawable/main_menu_minimal"
                android:iconTint="@color/xproject_daynight_icontint"
                android:title="@string/main_menu_minimal" />
        </menu>
    </item>

    <!--其它如：标记和帮助等-->
    <item
        android:id="@+id/newslist_menu_marked"
        android:title="@string/toolbar_menu_marked"
        app:showAsAction="never" />
    <!--帮助视图-->
    <item
        android:id="@+id/newslist_menu_help"
        android:title="@string/toolbar_menu_help"
        app:showAsAction="never" />
</menu>
